--- a/app/wordpress/Dockerfile
+++ b/app/wordpress/Dockerfile
@@ -4,6 +4,12 @@ COPY config/launch_script.sh /launch_script.sh
 
 RUN chmod +x /launch_script.sh
 
-RUN /bin/mkdir -p /usr/share/nginx/html
+RUN apk add wget
+
+RUN wget https://wordpress.org/latest.tar.gz
+
+RUN tar -xzf latest.tar.gz --strip-components=1
+
+RUN rm latest.tar.gz
 
 ENTRYPOINT ["sh", "/launch_script.sh"]
