Set up wordpress website and adminer

--- a/app/nginx/config/server.conf
+++ b/app/nginx/config/server.conf
@@ -1,10 +1,17 @@
 server {
+    listen 80;
+    server_name tel-bouh.1337.ma;
+    return 301 https://$host$request_uri;
+}
+
+server {
 	listen 443 ssl ;
 	listen [::]:443  ssl;
 	server_name tel-bouh.1337.ma;
 	
 	port_in_redirect off;
-	root /usr/share/nginx/html/;
+	#root /usr/share/nginx/html/;
+	root /var/www/html;
 	index index.php index.html;
 	access_log /var/log/nginx/my_access.log;
 	error_log /var/log/nginx/my_error.log;
