Add Makefile , add new post

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -43,6 +43,8 @@ services:
       - cloud-1-wp-vol:/var/www/html
     ports:
       - 9000:9000
+    depends_on:
+      - mariadb
     restart:  always
 #
   adminer:
