Improve services Docker images, update mariadb scripts

--- a/app/adminer/Dockerfile
+++ b/app/adminer/Dockerfile
@@ -2,10 +2,8 @@ FROM adminer:5
 
 USER root
 
-RUN apk update && apk add vim 
-
-RUN apk add --no-cache mysql-client
+RUN apk update && apk add --no-cache vim mysql-client
 
 USER	adminer
 
-ENTRYPOINT ["php", "-S", "[::]:8080", "-t", "/var/www/html"] 
+ENTRYPOINT ["php", "-S", "[::]:8080", "-t", "/var/www/html"]
