--- a/app/mariadb/Dockerfile
+++ b/app/mariadb/Dockerfile
@@ -1,17 +1,11 @@
-FROM  mariadb:11.8.1-noble-rc
-
-RUN apt-get update
-
-RUN apt-get install vim -y
-
-RUN apt-get install netcat-traditional -y
+FROM mariadb:11.8.1-noble-rc
 
 COPY ./config/launch_script.sh /launch_script.sh
-
 COPY ./config/updateDb.sh /updateDb.sh
 
-RUN chmod +x /launch_script.sh
-
-RUN chmod +x /updateDb.sh
+RUN chmod +x /launch_script.sh /updateDb.sh && \
+    apt-get update && \
+    apt-get install -y vim netcat-traditional && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT ["/bin/sh", "-c", "/launch_script.sh"]
