--- a/app/.env
+++ b/app/.env
@@ -2,5 +2,5 @@ ROOT_PASSWORD="cloud-1"
 USER_PASSWORD="cloud-1"
 DATABASE="cloud1database"
 DB_USER="cloud-1-User"
-HOST="mariadb"
+HOST="mariadb:3306"
 HOME=$HOME
